Used parameter store in getting database credentials Implemented TypeORM repository for database services

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack && sam build",
-    "deploy": "sam deploy --no-confirm-changeset"
+    "build": "nest build --builder webpack && sam build",
+    "deploy": "sam deploy --no-confirm-changeset --parameter-overrides ENV=dev"
   },
   "keywords": [
     "webpack",
@@ -19,11 +19,15 @@
   "author": "Carlo Eugene Manalo",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-ssm": "^3.556.0",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/typeorm": "^10.0.2",
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.137",
