Added create billing endpoint

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "nest build --builder webpack && sam build",
+    "build": "webpack && sam build",
     "start": "sam local start-api --env-vars env.json",
     "deploy": "sam deploy --no-confirm-changeset --parameter-overrides ENV=dev"
   },
@@ -25,6 +25,7 @@
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
+    "class-validator": "^0.14.1",
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
@@ -33,6 +34,7 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.137",
     "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
